<resources>
    <string name="app_name">Sevgi sherlari</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_rate">Baholash</string>
    <string name="action_share">Yuborish</string>
    <string name="action_favorite">Tanlash</string>
    <string name="action_copy_lyric">Nusxa olish</string>
    <string name="action_send_lyric">Sherni yuborish</string>
    <string name="action_font_size">Matn hajmi</string>
    <string name="menu_main">Asosiy sahifa</string>
    <string name="menu_favorite">Sevimlilar</string>
    <string name="menu_info">Dastur haqida</string>
    <string name="menu_apps">Boshqa dasturlarimiz</string>
    <string name="menu_share">Dasturni yuborish</string>
    <string name="menu_rate">Baholash</string>
    <string name="empty_fav">Sevimlilar ro\'yxatidan hech narsa topilmadi…</string>
</resources>