<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/menu"
            android:title="@string/menu_main" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/menu_favorite" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="@string/menu_info" />
        <item
            android:id="@+id/nav_apps"
            android:icon="@drawable/apps_black_24dp"
            android:title="@string/menu_apps" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share_black_24dp"
            android:title="@string/menu_share" />
    </group>

</menu>
