<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.android.sevgisherlari.ui.home.HomeFragment"
        android:label="@string/menu_main"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_favorite"
        android:name="com.android.sevgisherlari.ui.favorite.FavoriteFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/nav_info"
        android:name="com.android.sevgisherlari.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_info"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_apps"
        android:name="com.android.sevgisherlari.ui.tools.ToolsFragment"
        android:label="@string/menu_apps"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.android.sevgisherlari.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.android.sevgisherlari.ui.send.SendFragment"
        android:label="@string/menu_rate"
        tools:layout="@layout/fragment_send" />
</navigation>